--- a/css/style.css
+++ b/css/style.css
@@ -10,46 +10,55 @@ body{
 }
 
 nav{
-	height: 75px;
+	height: 100px;
 	width: 100%;
 	text-align: center;
+	position: fixed;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.11);
 }
 
 nav ul{
-	padding: 45px;
+	padding: 40px;
 }
 
 nav ul li{
 	text-transform: uppercase;
 	display: inline-block;
-	margin-right: 80px;
+	margin-right: 40px;
 }
 
 nav ul li a{
 	font-size: 20px;
 	color: white;
 	text-decoration: none;
+	font-weight: 300px;
 }
 
 header{
 	
-	background-color: black;
+	z-index: 2;
 }
 
 
 .landingsection{
-	background-image:url(../images/eiffeltower.jpg); 
+	background-image:url(../images/optimized-eiffeltower.jpg); 
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 600px;
+	height: 650px;
 	width: 100%;
 	top: 0;
 	left: 0;
+	z-index: 1;
+
 }
 
 h1{
 	text-transform: uppercase;
 	text-align: center;	
+	padding-top:350px;
+	color: #254648;
+	font-size: 45px;
 	
 }
 
