--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,15 @@ nav{
 }
 
 nav ul{
-	padding: 40px;
+	padding: 25px;
 }
 
 .fa-bars{
 	float: left;
 	color: white;
 	visibility: hidden;
-	margin: 20px;
+	margin: -10px;
+	font-size: 20px;
 }
 
 nav ul li{
@@ -55,7 +56,7 @@ nav ul li a:hover{
 
 nav.past-main {
     background-color:#000;
-    height: 75px;
+   
    
 }
 
