--- a/css/style.css
+++ b/css/style.css
@@ -75,19 +75,29 @@ header{
 	background-repeat: no-repeat;
 	background-size: cover;
 	height:100vh;
-	display: flex;
 	width: 100%;	
-	z-index: 1;
+	align-items: center;
+ 	text-align: center;
+	   position: center;
+  margin-bottom: 50px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 
 }
 
 h1{
 	text-transform: uppercase;
 	text-align: center;	
-	padding-top:250px;
+	
 	color: #254648;
 	font-size: 55px;
 	font-family: 'Montserrat', sans-serif;
+	width: 600px;
+  	margin: 0 auto 20px;
 	
 }
 
@@ -101,9 +111,8 @@ h1{
 	width:240px;
 	height:240px;
 	color:transparent;
-	
 	margin: 0 auto;
-	padding-top: 60px;
+	
 	
 }
 
