--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,10 @@ header{
 h1{
 	
 	color: #1A3234;
-	font-size: 55px;
-	font-family: 'Lato', sans-serif;
-	letter-spacing: 3px;
+    font-size: 55px;
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 3px;
+    text-shadow: 0px 2px;
 }
 
 
@@ -245,7 +246,9 @@ footer h3{
 .fa-git,.fa-tasks, .fa-html5, .fa-css3{
 	color: #2EAEBB;
 }
-
+::selection{
+	background: #efefef;
+}
 @media screen and (max-width: 560px)  {
 	.fa-bars{
 		visibility: visible;
