removed fake cover

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ header{
 
 
 .landingsection{
-	background-image:url(../images/work3.jpg);
+	background-image:url(../images/work.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height:95vh;
