--- a/css/style.css
+++ b/css/style.css
@@ -21,40 +21,41 @@ body{
 nav{
 	height: 75px;
 	width: 100%;
-	text-align: center;
+	
 	position: fixed;
 	top: 0;
-	background-color: #00B291;
+	background-color: rgba(14, 33, 44, 0.85);
 	transition: all 0.7s ease;
 	z-index: 1;
 }
 
 nav ul{
 	padding: 25px;
+	text-align: center;
 }
 
 
 nav ul li{
-	text-transform: uppercase;
+	text-transform: capitalize;
 	display: inline-block;
-	margin-right: 30px;
+	margin-right: 15px;
+	padding: 3px 5px;
 	
 }
 
 nav ul li a{
-	font-size: 20px;
+	font-size: 22px;
 	color: white;
 	text-decoration: none;
 	font-family: 'Lato', sans-serif;
 	transition: all 0.2s ease;
-
-	font-weight: 400;
+	border-left: 1px solid #FFFFFF;
+    padding-left: 25px;
 	
 }
 
 nav ul li a:hover{
-	border-bottom: 3px solid coral;
-	padding-bottom: 0.5em ;
+	padding-right: 20px;
 	background-color: #65002A;
 	transform:rotate(5deg );
 
@@ -79,7 +80,7 @@ header{
 
 
 .landingsection{
-	background-image:url(../images/work.jpg);
+	background-image:url(../images/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height:100vh;
@@ -138,7 +139,7 @@ h1{
 	line-height: 30px;
     font-size: 22px;
     padding-top: 30px;
-    padding-bottom: 80px;
+    padding-bottom:150px;
     font-weight: 300;
     width: 80%; 
 	
@@ -342,7 +343,6 @@ footer h3{
 	}
 
 	.landingsection{
-		background-image: url(../images/opteiffeltower.jpg);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
@@ -361,6 +361,6 @@ footer h3{
 		text-align: left;
 		display: inline-block;
 		text-transform: uppercase;
-		color:white;
+		
 	}
 }
