--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav{
 }
 
 nav ul{
-	padding: 25px;
+	padding: 22px;
 	text-align: center;
 }
 
@@ -39,7 +39,7 @@ nav ul li{
 	text-transform: capitalize;
 	display: inline-block;
 	margin-right: 15px;
-	padding: 3px 5px;
+	
 	
 }
 
@@ -50,7 +50,7 @@ nav ul li a{
 	font-family: 'Lato', sans-serif;
 	transition: all 0.2s ease;
 	border-left: 1px solid #FFFFFF;
-    padding-left: 25px;
+    padding-left: 22px;
 	
 }
 
@@ -114,7 +114,7 @@ h1{
 
 .aboutsection{
 	padding-top: 55px;
-	background-color: #00B291;
+	background-color: white;
 	font-weight: 300;
 }
 
