--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav ul li a{
 
 nav ul li a:hover{
 	padding-right: 20px;
-	background-color: #65002A;
+	background-color: rgba(13, 14, 14, 0.35);
 	transform:rotate(5deg );
 
 }
