--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
 @import url(https://fonts.googleapis.com/css?family=Linden+Hill);
 
 *{
@@ -133,12 +133,13 @@ h1{
 }
 .aboutme {
 	margin: auto;
-	line-height: 30px;
+	line-height: 35px;
     font-size: 22px;
     padding-top: 30px;
     padding-bottom:150px;
-    font-weight: 300;
+    font-weight: 900;
     width: 80%; 
+    color: #444444;
 	
 }
 .padding{
@@ -297,8 +298,8 @@ footer h3{
 
 .skillstext{
 	font-size: 20px;
-	font-weight: 300px;
-	line-height: 50px;
+	font-weight: 900px;
+	line-height: 40px;
 }
 
 #text{
