--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ header{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	background-position: center;
 
 }
 
@@ -147,7 +148,7 @@ h1{
 }
 
 .skillssection{
-	background-color: #0E212C;
+	background-color: #EB7155;
 	padding-top: 50px;
 	padding-bottom: 80px;
 }
@@ -161,7 +162,7 @@ h1{
 }
 .projectsection{
 	height: 100%;
-	background-color: #2EAEBB;
+	background-color: #C6415A;
 	padding-bottom: 50px;
 }
 .project{
