--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
@@ -8,7 +8,7 @@
 }
 
 .body{
-	font-family: 'Lato',sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	-webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -32,15 +32,15 @@ nav{
 }
 
 .links a{
-    text-transform: capitalize;
+    text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
-    color: #41A8C6;
-    margin-right: 20px;
-    font-family: 'Lato';
-    padding: 22px 0 22px 5px;
+    color: #727272;
+    margin-right: 15px;
+    font-family: 'Ubuntu';
+    padding: 25px 0 ;
     font-weight: 300;
-    font-size: 1.3em;
+    font-size: 1.2em;
     float: left;
 
 }
@@ -51,7 +51,7 @@ nav{
 
 .jumbotron{
 	background-color: #e1e1e1;
-	height: 90vh;
+	height: 98vh;
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -100,24 +100,23 @@ nav{
 
 .aboutsection h2 ,.skillssection h2{
 	text-align: center;
-	padding-top: 70px;
+	padding-top: 40px;
 	font-size: 30px;
 	font-family: 'Montserrat', sans-serif;
 	color: #474747;
 	padding-bottom: 3px;
 	border-bottom: 3px solid;
-	width: 17%;
 	margin: auto;
 }
 
 h2{
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 30px;
 	font-size: 30px;
 	font-family: 'Montserrat', sans-serif;
 	padding-bottom: 3px;
 	border-bottom: 3px solid;
-	width: 150px;
+	width: 220px;
 	margin: auto
 }
 
@@ -125,7 +124,7 @@ h2{
 	background-image: url(../img/profilepic.jpg);
 	height: 200px;
 	width: 195px;
-	margin: 70px auto;
+	margin: 30px auto;
 	background-size: cover;
 	background-position: center;
 	border-radius: 50%;
@@ -134,29 +133,27 @@ h2{
 }
 
 .description{
-	padding-bottom: 100px;
-	font-family: 'Lato', sans-serif;
+	padding-bottom: 500px;
+	font-family: 'Ubuntu', sans-serif;
 	font-weight: 300;
-	color: #1C4355;
+	color: #727272;
 	margin: auto;
-	width: 70%;
-}
-
-.description p{
-	line-height: 34px; 
-	font-size: 22px;
+	width: 65%;	
+	line-height: 32px;
+    font-size: 20px;
+    letter-spacing: 0.1px;
 
 }
+
 
 .skillssection{
-	background-color: #2D6A86;
+	background-color: #1a1a1a;
 	position: relative;
 }
 
 .porfoliosection{
-	background:#41A8C6;
+	background:#ED4747;
 	margin: auto;
-	text-align: auto;
 	position: relative;
 }
 .project{
@@ -165,19 +162,18 @@ h2{
 	text-align: center;
 	margin: auto;
 	padding:50px 0;
-	margin-bottom: 150px;
+	margin-bottom: 80px;
 }
 .skill{
 	color: white;
-	font-family: 'Lato',sans-serif;
-	padding: 100px 0;
+	font-family: 'Ubuntu',sans-serif;
+	padding: 50px 0;
 	font-size: 20px;
 	font-weight:300;
 	line-height: 32px;
 }
 .contactsection{
 	margin: auto;
-
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -195,7 +191,7 @@ form{
 }
 label{
 	font-size: 22px;
-	font-family: 'Lato',sans-serif;
+	font-family: 'Ubuntu',sans-serif;
 	display: block;
 	margin-top: 50px;
 	text-align: inherit;
@@ -209,7 +205,7 @@ input{
 	padding-top: 20px;
 	width: 350px;
 	font-size: 18px;
-	font-family: 'Lato',sans-serif;
+	font-family: 'Ubuntu',sans-serif;
 	font-weight: 300;
 }
 input[type="message"]{
@@ -243,20 +239,20 @@ input::selection{
 	
 }
 .footer{
-	background-color: #131313;
+	background-color: #273138;
 	height: 120px;
 	clear: both;
 }
 
 .social{
 	text-align: center;
-	color: #C6C6C6;
+	color: #DBDBDB;
 	font-size: 25px;
 	padding-top: 30px;
 }
 .social p{
 	text-align: center;
-	color: #C6C6C6;
+	color: #CBCBCB;
 	font-size: 15px;
 	padding-top: 10px;
 	letter-spacing: 1px;
@@ -264,8 +260,8 @@ input::selection{
 }
 .subfooter{
 	height: 50px;
-	background-color: #060606;
-	color: grey;
+	background-color: #222A30;
+	color: #A3A3A3;
 	text-align: center;
 	clear: both;
 }
@@ -286,7 +282,6 @@ input::selection{
 .zmdi-twitter,.zmdi-github,.zmdi-linkedin-box,
 .zmdi-email-open
 {
-	color:#C6C6C6;
 	margin-right: 20px;
 	cursor: pointer;
 }
