--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
 
 nav{
 	height: 70px;
-    background-color: rgba(255, 255, 255, 0.90);
+    background-color: rgba(255, 255, 255, 0.95);
     top: 0;
     position: fixed;
     width: 100%;
@@ -42,61 +42,40 @@ nav{
     font-weight: 300;
     font-size: 1.2em;
     float: left;
-
+	
 }
 .links a:hover{
 	color: #1C4355;
+	transition:all 0.5s ease;
 }
 
 
-.jumbotron{
-	background-color: #e1e1e1;
-	height: 98vh;
-	background-position: center;
-	background-size: cover;
+.headersection{
+	height: 85vh;
+	background-color: #BEBDBD;
 	background-attachment: fixed;
-	margin: auto;
-	background-image: url(../img/bg.jpg);
-    align-items: center;
-    text-align: center;
+	background-position: center;
+    background-size: cover;
     display: flex;
-    flex-direction: column;
-    justify-content:center;
-   
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    background-image: url(../img/back.jpg);
 }
 
-.intro{
-	font-family: 'Montserrat', sans-serif;
-	font-size: 70px;
-	font-weight: 700;
-	margin: auto;
+.intro1{
+	
+
+}
+
+.headersection h1{
+	text-align: center;
+	font-family: 'Ubuntu';
 	color: white;
-	background-color: #1C4355;
-	letter-spacing: 3px;
-	padding: 5px 10px;
-	transition: all 0.7s cubic-bezier(0, 0, 0.2, 1);
+	background-size: cover;
+	letter-spacing: 1px;
+	font-size: 80px;
 }
-
-.intro:hover{
-	background: white;
-	color:black;
-	cursor: move;
-}
-
-.jumbotron h5{
-	font-family: 'Montserrat', Helvetica;
-	font-size: 25px;
-	border-bottom: 2px solid black;
-	color: coral;
-	float: right;
-}
-
-.aboutsection{
-	
-	
-}
-
-
 
 .aboutsection h2 ,.skillssection h2{
 	text-align: center;
@@ -148,13 +127,19 @@ h2{
 
 .skillssection{
 	background-color: #1a1a1a;
-	position: relative;
+	
 }
 
 .porfoliosection{
-	background:#ED4747;
+	background:#32749B;
 	margin: auto;
 	position: relative;
+}
+
+.center{
+	margin:auto;
+	align-items:center;
+	justify-content:centerS;
 }
 .project{
 	
@@ -165,7 +150,7 @@ h2{
 	margin-bottom: 80px;
 }
 .skill{
-	color: white;
+	color: #D5D5D5;
 	font-family: 'Ubuntu',sans-serif;
 	padding: 50px 0;
 	font-size: 20px;
@@ -280,12 +265,15 @@ input::selection{
 /*==========ICONS=======================*/
 
 .zmdi-twitter,.zmdi-github,.zmdi-linkedin-box,
-.zmdi-email-open
+.zmdi-email-open,.zmdi-chevron-down
 {
 	margin-right: 20px;
 	cursor: pointer;
 }
 
+.zmdi-chevron-down{
+	color: white;
+}
 
 .zmdi-favorite{
 	color: #AB3939;
@@ -293,10 +281,14 @@ input::selection{
 	padding-top: 5px;
 }
 
-.zmdi:hover{
-	transform: rotate(360deg);
+.social a{
+	text-decoration: none;
+	color: #DBDBDB;
 }
 
+.social a:hover{
+	transform:rotate(360deg);
+}
 /*====================================*/
 ::selection {
 	background-color: rgba(6, 6, 6, 0.58);
@@ -306,4 +298,10 @@ input::selection{
 ::-moz-selection{
 	background-color: rgba(6, 6, 6, 0.58);
 	color:white;
+}
+
+@media screen (max-width: 600px){
+	.headersection h1{
+		margin-top: 450px;
+	}
 }
