added new background

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ nav{
 
 .headersection{
 	height: 85vh;
-	background-color: #BEBDBD;
+	background-color: #32749b;
 	background-attachment: fixed;
 	background-position: center;
     background-size: cover;
