--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,7 @@ nav{
 	background-size: cover;
 	letter-spacing: 1px;
 	font-size: 80px;
+	padding: 8px 8px;
 }
 
 .aboutsection h2 ,.skillssection h2{
