--- a/css/main.css
+++ b/css/main.css
@@ -335,9 +335,11 @@ input::selection{
 	color:white;
 }
 
-@media  (max-width: 500px){
+@media  (max-width: 550px){
 	.headersection h1{
 		font-size: 42px;
+		border: 0;
+		padding: 0;
 
 	}
 
